--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+[tool:pytest]
+testpaths = tests
 [isort]
 profile=black
 
@@ -8,8 +10,5 @@ extend-ignore = E203, E501 W503
 disallow_untyped_defs = True
 
 [pydocstyle]
-match_dir=pyenvertech-evt800
+match_dir=pyenvertechevt800
 convention=google
-
-[tool:pytest]
-asyncio_mode=auto
